--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "firebase": "^7.8.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
     "recompose": "^0.30.0"
   },
   "scripts": {
